petclinic-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-lb-service
  #namespace: staging
  #annotations:
  #      service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
  - protocol: TCP
    port: 443
    targetPort: 8080
    name: https    
  - protocol: TCP
    port: 8081
    targetPort: 8081
    name: management
  selector:
    app: petclinic
  type: LoadBalancer
